--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "start": "node backend/server",
     "server": "nodemon server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd frontend && npm run build",
-    "install-client": "cd frontend && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
 
   "author": "Ajay",
